result container added

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       </div>
    </header> 
    <main>
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 mt-4 px-2 gap-2">
+    <section class="lg:px-12 flex flex-col md:flex-row lg:flex-row mt-4 px-2 gap-4">
       <!-- cards -->
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 mt-4 gap-2 px-2 ">
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 w-full md:w-[60%] lg:w-[60%] mt-4 gap-2 px-2 ">
         <div class="card w-auto bg-pink-100 shadow-xl">
           <figure class="px-10 pt-10">
             <img src="./images/triangle.png" alt="" class="rounded-xl" />
@@ -34,9 +34,10 @@
           <div class="card-body items-center text-center">
             <h2 class="card-title">Triangle</h2>
             <p>Area (A) = 0.5 <i class="fa-solid fa-xmark"></i> b <i class="fa-solid fa-xmark"></i> h</p>
-            <p><input type="text" placeholder="b"> cm
+            <div class="flex">
+              <input type="text" placeholder="b"> cm
               <input type="text" placeholder="h"> cm
-            </p>
+            </div>
             <div class="card-actions">
               <button class="btn btn-primary case normal-case">Calculate</button>
             </div>
@@ -49,8 +50,10 @@
           <div class="card-body items-center text-center">
             <h2 class="card-title">Rectangle</h2>
             <p>Area (A) = w <i class="fa-solid fa-xmark"></i> l</p>
-            <p><input type="text" placeholder="w"> cm
-              <input type="text" placeholder="l"> cm</p>
+            <div class="flex">
+              <input type="text" placeholder="w"> cm
+              <input type="text" placeholder="l"> cm
+            </div>
             <div class="card-actions">
               <button class="btn btn-primary case normal-case">Calculate</button>
             </div>
@@ -108,17 +111,19 @@
             </div>
           </div>
         </div>
-
       </div>
       <!-- results -->
-      <div class="">
+      <div class=" w-auto md:w-[40%] lg:w-[40%]">
         <h3 class="underline text-xl font-semibold text-center">Area Calculation</h3>
-
+        <div class="overflow-x-auto">
+          <table class="table w-full">
+            <tbody id="table-container">
+            </tbody>
+          </table>
+        </div>
       </div>
-    </div>
-   </main>
-    
-      
+    </section>
+   </main>   
 </body>
 <script src="js/common.js"></script>
 <script src="js/index.js"></script>
