--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </figure>
           <div class="card-body items-center text-center">
             <h2 class="card-title">Rectangle</h2>
-            <p>Area (A) = w <i class="fa-solid fa-xmark"></i> l</p>
+            <p><span id="rectangle-area">Area (A)</span> = <span id="rectangle-w">w</span> <i class="fa-solid fa-xmark"></i> <span id="rectangle-l">l</span></p>
             <div class="flex gap-4">
               <input id="field-w" class="w-16 text-center" type="text" placeholder="w">cm
               <input id="field-l" class="w-16 text-center" type="text" placeholder="l">cm
@@ -65,8 +65,8 @@
           </figure>
           <div class="card-body items-center text-center">
             <h2 class="card-title">Parallelogram</h2>
-            <p>b=10cm, h=12cm</p>
-            <p>Area (A) = b <i class="fa-solid fa-xmark"></i> h</p>
+            <p>b= <span id="parallelogram-b-text">10</span> cm, h= <span id="parallelogram-h-text">12</span> cm</p>
+            <p><span id="parallelogram-area">Area (A)</span> = <span id="parallelogram-b">b</span> <i class="fa-solid fa-xmark"></i> <span id="parallelogram-h">h</span></p>
             <div class="card-actions">
               <button id="btn-parallelogram" class="btn btn-primary case normal-case">Calculate</button>
             </div>
@@ -78,8 +78,8 @@
           </figure>
           <div class="card-body items-center text-center">
             <h2 class="card-title">Rhombus</h2>
-            <p>d1 = 16cm d2 = 8cm</p>
-            <p>Area (A) = 0.5 <i class="fa-solid fa-xmark"></i> d1 <i class="fa-solid fa-xmark"></i> d2</p>
+            <p>d1 =<span id="rhombus-d1-text">16</span> cm d2 =<span id="rhombus-d2-text">8</span> cm</p>
+            <p><span id="rhombus-area">Area (A)</span> = 0.5 <i class="fa-solid fa-xmark"></i> <span id="rhombus-d1">d1</span> <i class="fa-solid fa-xmark"></i> <span id="rhombus-d2">d2</span></p>
             <div class="card-actions">
               <button id="btn-rhombus" class="btn btn-primary case normal-case">Calculate</button>
             </div>
@@ -91,8 +91,8 @@
           </figure>
           <div class="card-body items-center text-center">
             <h2 class="card-title">Pentagon</h2>
-            <p>p = 6cm b = 10cm</p>
-            <p>Area (A) = 0.5 <i class="fa-solid fa-xmark"></i> p <i class="fa-solid fa-xmark"></i> b</p>
+            <p>p = <span id="pentagon-p-text">6</span> cm b =<span id="pentagon-b-text">10</span> cm</p>
+            <p><span id="pentagon-area">Area (A)</span> = 0.5 <i class="fa-solid fa-xmark"></i> <span id="pentagon-p">p</span> <i class="fa-solid fa-xmark"></i> <span id="pentagon-b">b</span></p>
             <div class="card-actions">
               <button id="btn-pentagon" class="btn btn-primary case normal-case">Calculate</button>
             </div>
@@ -104,8 +104,8 @@
           </figure>
           <div class="card-body items-center text-center">
             <h2 class="card-title">Ellipse</h2>
-            <p>a = 10cm b = 4cm</p>
-            <p>Area (A) = 3.14 <i class="fa-solid fa-xmark"></i> a <i class="fa-solid fa-xmark"></i> b</p>
+            <p>a = <span id="ellipse-a-text">10</span> cm b =<span id="ellipse-b-text">4</span> cm</p>
+            <p><span id="ellipse-area">Area (A)</span> = 3.14 <i class="fa-solid fa-xmark"></i> <span id="ellipse-a">a</span> <i class="fa-solid fa-xmark"></i> <span id="ellipse-b">b</span> </p>
             <div class="card-actions">
               <button id="btn-ellipse" class="btn btn-primary case normal-case">Calculate</button>
             </div>
