area calculation added

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <img src="./images/triangle.png" alt="" class="rounded-xl" />
           </figure>
           <div class="card-body items-center text-center">
-            <h2 class="card-title">Triangle</h2>
+            <h2 id="triangle" class="card-title">Triangle</h2>
             <p><span id="triangle-area">Area (A)</span> = 0.5 <i class="fa-solid fa-xmark"></i> <span id="triangle-b">b</span> <i class="fa-solid fa-xmark"></i> <span id="triangle-h">h</span> </p>
             <div class="flex gap-4">
               <input id="field-b" class="w-16 text-center" type="text" placeholder="b"> cm
@@ -48,7 +48,7 @@
             <img src="./images/rectangle.png" alt="" class="rounded-xl" />
           </figure>
           <div class="card-body items-center text-center">
-            <h2 class="card-title">Rectangle</h2>
+            <h2 id="rectangle" class="card-title">Rectangle</h2>
             <p><span id="rectangle-area">Area (A)</span> = <span id="rectangle-w">w</span> <i class="fa-solid fa-xmark"></i> <span id="rectangle-l">l</span></p>
             <div class="flex gap-4">
               <input id="field-w" class="w-16 text-center" type="text" placeholder="w">cm
@@ -64,7 +64,7 @@
             <img src="./images/parallelogram.png" alt="" class="rounded-xl" />
           </figure>
           <div class="card-body items-center text-center">
-            <h2 class="card-title">Parallelogram</h2>
+            <h2 id="parallelogram" class="card-title">Parallelogram</h2>
             <p>b= <span id="parallelogram-b-text">10</span> cm, h= <span id="parallelogram-h-text">12</span> cm</p>
             <p><span id="parallelogram-area">Area (A)</span> = <span id="parallelogram-b">b</span> <i class="fa-solid fa-xmark"></i> <span id="parallelogram-h">h</span></p>
             <div class="card-actions">
@@ -77,7 +77,7 @@
             <img src="./images/rhombus.png" alt="" class="rounded-xl" />
           </figure>
           <div class="card-body items-center text-center">
-            <h2 class="card-title">Rhombus</h2>
+            <h2 id="rhombus" class="card-title">Rhombus</h2>
             <p>d1 =<span id="rhombus-d1-text">16</span> cm d2 =<span id="rhombus-d2-text">8</span> cm</p>
             <p><span id="rhombus-area">Area (A)</span> = 0.5 <i class="fa-solid fa-xmark"></i> <span id="rhombus-d1">d1</span> <i class="fa-solid fa-xmark"></i> <span id="rhombus-d2">d2</span></p>
             <div class="card-actions">
@@ -90,7 +90,7 @@
             <img src="./images/pentagon.png" alt="" class="rounded-xl" />
           </figure>
           <div class="card-body items-center text-center">
-            <h2 class="card-title">Pentagon</h2>
+            <h2 id="pentagon" class="card-title">Pentagon</h2>
             <p>p = <span id="pentagon-p-text">6</span> cm b =<span id="pentagon-b-text">10</span> cm</p>
             <p><span id="pentagon-area">Area (A)</span> = 0.5 <i class="fa-solid fa-xmark"></i> <span id="pentagon-p">p</span> <i class="fa-solid fa-xmark"></i> <span id="pentagon-b">b</span></p>
             <div class="card-actions">
@@ -103,7 +103,7 @@
             <img src="./images/ellipse.png" alt="" class="rounded-xl" />
           </figure>
           <div class="card-body items-center text-center">
-            <h2 class="card-title">Ellipse</h2>
+            <h2 id="ellipse" class="card-title">Ellipse</h2>
             <p>a = <span id="ellipse-a-text">10</span> cm b =<span id="ellipse-b-text">4</span> cm</p>
             <p><span id="ellipse-area">Area (A)</span> = 3.14 <i class="fa-solid fa-xmark"></i> <span id="ellipse-a">a</span> <i class="fa-solid fa-xmark"></i> <span id="ellipse-b">b</span> </p>
             <div class="card-actions">
