--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
     <section class="lg:px-12 flex flex-col md:flex-row lg:flex-row mt-4 px-2 gap-4">
       <!-- cards -->
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 w-full md:w-[60%] lg:w-[60%] mt-4 gap-2 px-2 ">
-        <div class="card w-auto bg-pink-100 shadow-xl">
+        <div class="card w-auto hover:bg-red-400 shadow-xl">
           <figure class="px-10 pt-10">
             <img src="./images/triangle.png" alt="" class="rounded-xl" />
           </figure>
           <div class="card-body items-center text-center">
             <h2 id="triangle" class="card-title">Triangle</h2>
-            <p><span id="triangle-area">Area (A)</span> = 0.5 <i class="fa-solid fa-xmark"></i> <span id="triangle-b">b</span> <i class="fa-solid fa-xmark"></i> <span id="triangle-h">h</span> </p>
+            <p>Area (A) = 0.5 <i class="fa-solid fa-xmark"></i> b <i class="fa-solid fa-xmark"></i> h </p>
             <div class="flex gap-4">
               <input id="field-b" class="w-16 text-center" type="text" placeholder="b"> cm
               <input id="field-h" class="w-16 text-center" type="text" placeholder="h"> cm
@@ -43,13 +43,13 @@
             </div>
           </div>
         </div>
-        <div class="card w-auto bg-pink-100 shadow-xl">
+        <div class="card w-auto hover:bg-lime-400 shadow-xl">
           <figure class="px-10 pt-10">
             <img src="./images/rectangle.png" alt="" class="rounded-xl" />
           </figure>
           <div class="card-body items-center text-center">
             <h2 id="rectangle" class="card-title">Rectangle</h2>
-            <p><span id="rectangle-area">Area (A)</span> = <span id="rectangle-w">w</span> <i class="fa-solid fa-xmark"></i> <span id="rectangle-l">l</span></p>
+            <p>Area (A) = w <i class="fa-solid fa-xmark"></i> l</p>
             <div class="flex gap-4">
               <input id="field-w" class="w-16 text-center" type="text" placeholder="w">cm
               <input id="field-l" class="w-16 text-center" type="text" placeholder="l">cm
@@ -59,53 +59,53 @@
             </div>
           </div>
         </div>
-        <div class="card w-auto bg-pink-100 shadow-xl">
+        <div class="card w-auto hover:bg-amber-400 shadow-xl">
           <figure class="px-10 pt-10">
             <img src="./images/parallelogram.png" alt="" class="rounded-xl" />
           </figure>
           <div class="card-body items-center text-center">
             <h2 id="parallelogram" class="card-title">Parallelogram</h2>
             <p>b= <span id="parallelogram-b-text">10</span> cm, h= <span id="parallelogram-h-text">12</span> cm</p>
-            <p><span id="parallelogram-area">Area (A)</span> = <span id="parallelogram-b">b</span> <i class="fa-solid fa-xmark"></i> <span id="parallelogram-h">h</span></p>
+            <p>Area (A) = b <i class="fa-solid fa-xmark"></i> h</p>
             <div class="card-actions">
               <button id="btn-parallelogram" class="btn btn-primary case normal-case">Calculate</button>
             </div>
           </div>
         </div>
-        <div class="card w-auto bg-pink-100 shadow-xl">
+        <div class="card w-auto hover:bg-slate-400 shadow-xl">
           <figure class="px-10 pt-10">
             <img src="./images/rhombus.png" alt="" class="rounded-xl" />
           </figure>
           <div class="card-body items-center text-center">
             <h2 id="rhombus" class="card-title">Rhombus</h2>
-            <p>d1 =<span id="rhombus-d1-text">16</span> cm d2 =<span id="rhombus-d2-text">8</span> cm</p>
-            <p><span id="rhombus-area">Area (A)</span> = 0.5 <i class="fa-solid fa-xmark"></i> <span id="rhombus-d1">d1</span> <i class="fa-solid fa-xmark"></i> <span id="rhombus-d2">d2</span></p>
+            <p>d<sub>1</sub> =<span id="rhombus-d1-text">16</span> cm d<sub>2</sub> =<span id="rhombus-d2-text">8</span> cm</p>
+            <p>Area (A) = 0.5 <i class="fa-solid fa-xmark"></i> d<sub>1</sub> <i class="fa-solid fa-xmark"></i> d<sub>2</sub></p>
             <div class="card-actions">
               <button id="btn-rhombus" class="btn btn-primary case normal-case">Calculate</button>
             </div>
           </div>
         </div>
-        <div class="card w-auto bg-pink-100 shadow-xl">
+        <div class="card w-auto hover:bg-cyan-400 shadow-xl">
           <figure class="px-10 pt-10">
             <img src="./images/pentagon.png" alt="" class="rounded-xl" />
           </figure>
           <div class="card-body items-center text-center">
             <h2 id="pentagon" class="card-title">Pentagon</h2>
             <p>p = <span id="pentagon-p-text">6</span> cm b =<span id="pentagon-b-text">10</span> cm</p>
-            <p><span id="pentagon-area">Area (A)</span> = 0.5 <i class="fa-solid fa-xmark"></i> <span id="pentagon-p">p</span> <i class="fa-solid fa-xmark"></i> <span id="pentagon-b">b</span></p>
+            <p>Area (A) = 0.5 <i class="fa-solid fa-xmark"></i> p <i class="fa-solid fa-xmark"></i> b</p>
             <div class="card-actions">
               <button id="btn-pentagon" class="btn btn-primary case normal-case">Calculate</button>
             </div>
           </div>
         </div>
-        <div class="card w-auto bg-pink-100 shadow-xl">
+        <div class="card w-auto hover:bg-pink-400  shadow-xl">
           <figure class="px-10 pt-10">
             <img src="./images/ellipse.png" alt="" class="rounded-xl" />
           </figure>
           <div class="card-body items-center text-center">
             <h2 id="ellipse" class="card-title">Ellipse</h2>
             <p>a = <span id="ellipse-a-text">10</span> cm b =<span id="ellipse-b-text">4</span> cm</p>
-            <p><span id="ellipse-area">Area (A)</span> = 3.14 <i class="fa-solid fa-xmark"></i> <span id="ellipse-a">a</span> <i class="fa-solid fa-xmark"></i> <span id="ellipse-b">b</span> </p>
+            <p>Area (A) = 3.14 <i class="fa-solid fa-xmark"></i> a <i class="fa-solid fa-xmark"></i> b</p>
             <div class="card-actions">
               <button id="btn-ellipse" class="btn btn-primary case normal-case">Calculate</button>
             </div>
