--- a/my-blogs.html
+++ b/my-blogs.html
@@ -7,7 +7,7 @@
     <title>My Blogs</title>
 </head>
 <body>
-    <h1>Questions-Answers</h1>
+    <h1>Answers</h1>
     <p>1. The Document Object Model (DOM) is a programming interface for web documents.
         It represents the page so that programs can change the document structure, style, and content. The DOM represents the document as nodes and objects; that way, programming languages can interact with the page.
     </p>
