--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </figure>
           <div class="card-body items-center text-center">
             <h2 id="rhombus" class="card-title">Rhombus</h2>
-            <p>d<sub>1</sub> =<span id="rhombus-d1-text">16</span> cm d<sub>2</sub> =<span id="rhombus-d2-text">8</span> cm</p>
+            <p>d<sub>1</sub> =<span id="rhombus-d1-text">16</span> cm, d<sub>2</sub> =<span id="rhombus-d2-text">8</span> cm</p>
             <p>Area (A) = 0.5 <i class="fa-solid fa-xmark"></i> d<sub>1</sub> <i class="fa-solid fa-xmark"></i> d<sub>2</sub></p>
             <div class="card-actions">
               <button id="btn-rhombus" class="btn btn-primary case normal-case">Calculate</button>
@@ -91,7 +91,7 @@
           </figure>
           <div class="card-body items-center text-center">
             <h2 id="pentagon" class="card-title">Pentagon</h2>
-            <p>p = <span id="pentagon-p-text">6</span> cm b =<span id="pentagon-b-text">10</span> cm</p>
+            <p>p = <span id="pentagon-p-text">6</span> cm, b =<span id="pentagon-b-text">10</span> cm</p>
             <p>Area (A) = 0.5 <i class="fa-solid fa-xmark"></i> p <i class="fa-solid fa-xmark"></i> b</p>
             <div class="card-actions">
               <button id="btn-pentagon" class="btn btn-primary case normal-case">Calculate</button>
@@ -104,7 +104,7 @@
           </figure>
           <div class="card-body items-center text-center">
             <h2 id="ellipse" class="card-title">Ellipse</h2>
-            <p>a = <span id="ellipse-a-text">10</span> cm b =<span id="ellipse-b-text">4</span> cm</p>
+            <p>a = <span id="ellipse-a-text">10</span> cm, b =<span id="ellipse-b-text">4</span> cm</p>
             <p>Area (A) = 3.14 <i class="fa-solid fa-xmark"></i> a <i class="fa-solid fa-xmark"></i> b</p>
             <div class="card-actions">
               <button id="btn-ellipse" class="btn btn-primary case normal-case">Calculate</button>
